--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "graphviz>=0.20.3",
     "pandas>=2.2.3",
     "psutil>=6.1.0",
 ]
